# timeglance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: async_example.py  basic.py  numpy.py  pandas.py  practical_batch_etl.py
src/timeglance/: __init__.py  config.py  context.py  core.py  decorators.py  exceptions.py  forecast.py  predictor.py  profiler.py  reporter.py
src/timeglance/display/: __init__.py  progress.py  rich_output.py  terminal.py
src/timeglance/exporters/: __init__.py  csv_exporter.py  html_exporter.py  json_exporter.py
src/timeglance/integrations/: asyncio.py  dask.py  numpy.py  pandas.py
src/timeglance/models/: __init__.py  forecast.py  metrics.py  report.py
src/timeglance/utils/: __init__.py  confidence.py  memory.py  statistics.py  timing.py
tests/: test_async.py  test_confidence.py  test_forecast.py  test_memory.py
