[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeglance"
version = "0.1.0"
description = "Forecast runtime and memory usage while iterating over Python workloads."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Hameez Ahmad" }]
keywords = ["profiling", "forecasting", "progress", "runtime", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13"]
pandas = ["pandas>=1.5"]
numpy = ["numpy>=1.23"]
dask = ["dask>=2023.1.0"]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/hameezAhmad/timeglance"
Repository = "https://github.com/hameezAhmad/timeglance"
Issues = "https://github.com/hameezAhmad/timeglance/issues"
Changelog = "https://github.com/hameezAhmad/timeglance/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["timeglance"]
